--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(/images/image-qr-code.png);
+  background-image: url(images/image-qr-code.png);
   background-position: center;
   background-size: cover;
 }
